5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1593_1806.log
== TEST (2019-03-28 11:10:35) 
-- CODE:
from math impor * 

n = int(input("numero de pessoas: "))

p(n) = (1 - factorial(365) / factorial(365 - n) * 1 / 365 ** n) * 100
r = round(p(n), 2)

 print(r)
-- ERROR:
File "XXXX", line 1
    from math impor * 
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:10:42) 
-- CODE:
from math import * 

n = int(input("numero de pessoas: "))

p(n) = (1 - factorial(365) / factorial(365 - n) * 1 / 365 ** n) * 100
r = round(p(n), 2)

 print(r)
-- ERROR:
File "XXXX", line 8
    print(r)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:10:47) 
-- CODE:
from math import * 

n = int(input("numero de pessoas: "))

p(n) = (1 - factorial(365) / factorial(365 - n) * 1 / 365 ** n) * 100
r = round(p(n), 2)

print(r)
-- ERROR:
File "XXXX", line 5
    p(n) = (1 - factorial(365) / factorial(365 - n) * 1 / 365 ** n) * 100
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:11:02) 
-- CODE:
from math import * 

n = int(input("numero de pessoas: "))

p = (1 - factorial(365) / factorial(365 - n) * 1 / 365 ** n) * 100
r = round(p, 2)

print(r)
-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:11:09) 
-- CODE:
from math import * 

n = int(input("numero de pessoas: "))

p = (1 - factorial(365) / factorial(365 - n) * 1 / 365 ** n) * 100
r = round(p, 2)

print(r)
-- EXECUTION TIME:
0.178188
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
